# argmining23-stance-aware-re-ranking

./: .gitignore  Pipfile  README.md  config.yml  evaluation_reranking_all.ipynb  evaluation_reranking_f1.ipynb  example_reranking.ipynb  notes.md  pyproject.toml  slurm.sh
.github/workflows/: ci.yml
data/: .gitignore
data/corpus/: README.md
data/qrels/: README.md  touche-task2-2022-quality.qrels  touche-task2-2022-relevance.qrels  touche-task2-2022-stance.qrels
data/runs/: README.md
data/runs/Aldo-Nadi/output/: run3.txt  run4.txt  run5.txt
data/runs/Asuna/output/: run1.txt
data/runs/Captain-Levi/output/: run1.txt  run5.txt
data/runs/Captain-Tempesta/output/: run1.txt  run2.txt  run3.txt  run4.txt  run5.txt
data/runs/Grimjack/output/: run1.txt  run2.txt  run3.txt  run4.txt  run5.txt
data/runs/Katana/output/: run1.txt  run2.txt  run3.txt
data/runs/Puss-in-Boots/output/: run1.txt
data/topics/: README.md
fare/: __init__.py  __main__.py  config.py
fare/api/: huggingface.py
fare/metric/: __init__.py  classification.py  f1.py  fairness.py
fare/modules/: diversity_reranker.py  effectiveness_reranker.py  fairness_reranker.py  runs_loader.py  stance_filter.py  stance_randomizer.py  stance_reranker.py  stance_tagger.py  text_loader.py  topics_loader.py
fare/utils/: nltk.py  stance.py
notebooks/: .gitignore  evaluation_reranking.ipynb  evaluation_reranking_all.ipynb  example_reranking.ipynb  predict_stance_gpt3.ipynb  predict_stance_roberta-binary.ipynb  predict_stance_roberta.ipynb  prepare_data_for_stance.ipynb
notebooks/cache_dir/: cached_dev_roberta_128_4_2
notebooks/gdrive/MyDrive/checkpoints/: eval_results.txt
stare/: __init__.py  __main__.py  config.py
stare/metric/: __init__.py  classification.py  fairness.py
stare/modules/: fairness_reranker.py  optimal_reranker.py  runs_loader.py  stance_filter.py  stance_randomizer.py  stance_reranker.py  stance_tagger.py  text_loader.py  topics_loader.py
stare/utils/: nltk.py  pyterrier.py  stance.py
