[project]
name = "stare"
description = "Stance-Aware Re-ranking for Comparative Queries."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "click~=8.1",
    "dataclasses-json~=0.5.14",
    "defusedxml~=0.7.1",
    "diskcache~=5.6",
    "importlib-metadata~=4.0",
    "ir-measures~=0.3.3",
    "jupyterlab~=4.0",
    "jupyter~=1.0",
    "marshmallow~=3.20",
    "matplotlib~=3.7",
    "nltk~=3.8",
    "numpy~=1.25",
    "openai~=0.27.9",
    "openpyxl~=3.1",
    "pandas~=2.0",
    "pingouin~=0.5.3",
    "protobuf~=4.24",
    "pyndeval~=0.0.3",
    "python-terrier~=0.9.2",
    "pyyaml~=6.0",
    "ratelimit~=2.2",
    "requests~=2.31",
    "scikit-learn~=1.3",
    "scipy~=1.11",
    "seaborn~=0.12.2",
    "sentencepiece~=0.1.99",
    "simpletransformers~=0.64.3",
    "torch~=2.0",
    "tqdm~=4.66",
    "transformers~=4.32",
    "urllib3~=2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "bandit[toml]~=1.7",
    "flake8~=6.1",
    "pylint~=2.17",
    "pytest~=7.4",
    "pytest-cov~=4.0",
]

[build-system]
requires = ["setuptools>=50", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["stare"]
namespaces = false

[tool.setuptools.package-data]
mypkg = ["*.txt", "*.md", "*.rst"]

[tool.pylint.messages_control]
disable = [
    "C",
    "R",
    "fixme",
    "logging-fstring-interpolation"
]

[tool.bandit.assert_used]
skips = ["**/test_*.py"]

[tool.pytest.ini_options]
log_cli = "True"
filterwarnings = [
    "ignore::marshmallow.warnings.RemovedInMarshmallow4Warning",
]

[tool.setuptools_scm]
